--- a/styles/main.css
+++ b/styles/main.css
@@ -80,7 +80,7 @@ a:hover {
 
 .header {
   position: relative;
-  height: 765px;
+  height: 100vh;
   font-weight: 400; }
   .header__image {
     background-image: url(../images/header.jpg);
